2001-04-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Added option to choose the
	source of prices. Adapted to changes in html-utilities.

	* src/scm/report/pnl.scm: Adapted to changes.

	* src/scm/report-utilities.scm (gnc:monetary->string): Fix bug.

	* src/scm/html-utilities.scm (gnc:html-make-exchangerates):
	Switched to different arguments. Fix bug.

	* src/scm/commodity-utilities.scm: fix bug

	* src/scm/options-utilities.scm (gnc:options-add-price-source!):
	added function.

	* src/engine/gnc-pricedb.c (gnc_pricedb_lookup_nearest_in_time):
	fix bug.

2001-04-26  Christian Stimming  <stimming@tuhh.de>

	* src/scm/commodity-utilities.scm
	(gnc:exchange-by-pricedb-{latest,nearest}): new functions.

2001-04-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: handle scm parsing errors

	* src/scm/report.scm: fix bug

	* src/guile/gfec.c: handle NULLs

2001-04-26  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-barchart.scm: New file, it is the merger of
	income-expense-graph.scm and net-worth-timeseries.scm.

	* src/scm/report/*.scm: adapt to changed gnc:make-report-anchor.
	
	* src/scm/html-utilities.scm (gnc:make-report-anchor):
	gnc:report-add-child-by-id! is now used inside here. API changed.

2001-04-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/commodity-utilities.scm: fix fixme

	* src/engine/Group.c (xaccGroupGetAccount): remove pokey warning

	* src/engine/gnc-transaction-xml-v2.c: read & write split action
	field

	* src/gnome/druid-commodity.c: do gncFileNew after gncFileQuit

	* src/guile/gnc.gwp: remove pokey functions (not used anymore)

	* src/scm/main.scm: fix bug. don't do new user dialog if we
	have a file on the command line.

	* src/FileDialog.c (gncAddHistory): fix bug. check for NULL.

	* src/guile/gnucash.c.in: include string.h

	* src/gnome/window-main.c: don't restore state for old format files

2001-04-24  Dave Peticolas  <dave@krondo.com>
