@@ -174,6 +174,10 @@ void gnucash_sheet_compute_visible_range (GnucashSheet *sheet);
 void gnucash_sheet_make_cell_visible (GnucashSheet *sheet,
                                       VirtualLocation virt_loc);
 
+void gnucash_sheet_show_range (GnucashSheet *sheet,
+                               VirtualCellLocation start_loc,
+                               VirtualCellLocation end_loc);
+
 void gnucash_sheet_set_cursor (GnucashSheet *sheet, CellBlock *cursor);
 
 void gnucash_sheet_update_adjustments (GnucashSheet *sheet);
